--- a/app.ipynb
+++ b/app.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -401,10 +401,243 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting PyPDF2\n",
+      "  Obtaining dependency information for PyPDF2 from https://files.pythonhosted.org/packages/8e/5e/c86a5643653825d3c913719e788e41386bee415c2b87b4f955432f2de6b2/pypdf2-3.0.1-py3-none-any.whl.metadata\n",
+      "  Downloading pypdf2-3.0.1-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Downloading pypdf2-3.0.1-py3-none-any.whl (232 kB)\n",
+      "   ---------------------------------------- 0.0/232.6 kB ? eta -:--:--\n",
+      "   - -------------------------------------- 10.2/232.6 kB ? eta -:--:--\n",
+      "   -------------------------------------- - 225.3/232.6 kB 3.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 232.6/232.6 kB 2.9 MB/s eta 0:00:00\n",
+      "Installing collected packages: PyPDF2\n",
+      "Successfully installed PyPDF2-3.0.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install PyPDF2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import PySimpleGUI as sg\n",
+    "# from transformers import pipeline\n",
+    "# import PyPDF2\n",
+    "\n",
+    "# # Load the question answering pipeline\n",
+    "# model_name = \"bert-large-uncased-whole-word-masking-finetuned-squad\"\n",
+    "# qa_pipeline = pipeline(\"question-answering\", model=model_name, tokenizer=model_name)\n",
+    "\n",
+    "# # Initialize conversation history dictionary\n",
+    "# conversation_history = {\n",
+    "#     \"context\": None,\n",
+    "#     \"questions\": [],\n",
+    "#     \"answers\": []\n",
+    "# }\n",
+    "\n",
+    "# def answer_question(context, question):\n",
+    "#     try:\n",
+    "#         if len(conversation_history['questions']) != 0:\n",
+    "#             concatenated_text = \"\"\n",
+    "#             for history_question, answer in zip(conversation_history[\"questions\"], conversation_history[\"answers\"]):\n",
+    "#                 concatenated_text += f\"{history_question} {answer}. \"\n",
+    "            \n",
+    "#             question = concatenated_text + question\n",
+    "\n",
+    "\n",
+    "#         result = qa_pipeline(question=question, context=context)\n",
+    "#         return question, result['answer'], result['score']\n",
+    "#     except Exception as e:\n",
+    "#         print(\"Error occurred while answering the question:\", e)\n",
+    "#         return \"Sorry, I couldn't find an answer to that question.\"\n",
+    "\n",
+    "# def add_to_conversation_history(context, question, answer):\n",
+    "#     # Add the current context, question, and answer to conversation history\n",
+    "#     conversation_history[\"context\"] = context\n",
+    "#     conversation_history[\"questions\"].append(question)\n",
+    "#     conversation_history[\"answers\"].append(answer)\n",
+    "\n",
+    "# def extract_text_from_pdf(pdf_file_path):\n",
+    "#     text = \"\"\n",
+    "#     with open(pdf_file_path, 'rb') as file:\n",
+    "#         pdf_reader = PyPDF2.PdfFileReader(file)\n",
+    "#         for page_num in range(pdf_reader.numPages):\n",
+    "#             page = pdf_reader.getPage(page_num)\n",
+    "#             text += page.extractText()\n",
+    "#     return text\n",
+    "\n",
+    "# # Define GUI layout\n",
+    "# layout = [\n",
+    "#     [sg.Text(\"Question-Answering System\")],\n",
+    "#     [sg.Text(\"PDF File:\"), sg.InputText(key='-PDF_FILE-'), sg.FileBrowse()],\n",
+    "#     [sg.Text(\"Context:\"), sg.Multiline(key='-CONTEXT-', size=(60, 10))],\n",
+    "#     [sg.Multiline(size=(60, 10), key='-OUTPUT-', disabled=True)],\n",
+    "#     [sg.InputText(key='-INPUT-')],\n",
+    "#     [sg.Button('Load PDF'), sg.Button('Ask'), sg.Button('Exit')],\n",
+    "# ]\n",
+    "\n",
+    "# # Create the GUI window\n",
+    "# window = sg.Window('QA System', layout)\n",
+    "\n",
+    "# # Main event loop\n",
+    "# while True:\n",
+    "#     event, values = window.read()\n",
+    "\n",
+    "#     if event == sg.WINDOW_CLOSED or event == 'Exit':\n",
+    "#         break\n",
+    "\n",
+    "#     if event == 'Load PDF':\n",
+    "#         pdf_file_path = values['-PDF_FILE-']\n",
+    "#         if pdf_file_path:\n",
+    "#             context = extract_text_from_pdf(pdf_file_path)\n",
+    "#             window['-CONTEXT-'].update(context)\n",
+    "\n",
+    "#     if event == 'Ask':\n",
+    "#         user_input = values['-INPUT-']\n",
+    "#         context = values['-CONTEXT-']\n",
+    "\n",
+    "#         if user_input:\n",
+    "#             question = user_input\n",
+    "\n",
+    "#             # Get response to the user's question\n",
+    "#             concat, answer, score = answer_question(context, question)\n",
+    "#             add_to_conversation_history(context, question, answer)\n",
+    "\n",
+    "#             # Display the answer in the GUI window\n",
+    "#             window['-OUTPUT-'].print(\"Question: \" + concat)\n",
+    "#             window['-OUTPUT-'].print(\"Answer: \" + answer)\n",
+    "#             window['-OUTPUT-'].print(\"Score: \" + str(score))\n",
+    "#             window['-OUTPUT-'].print(\"\")\n",
+    "\n",
+    "# window.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-large-uncased-whole-word-masking-finetuned-squad were not used when initializing BertForQuestionAnswering: ['bert.pooler.dense.weight', 'bert.pooler.dense.bias']\n",
+      "- This IS expected if you are initializing BertForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "import PySimpleGUI as sg\n",
+    "from transformers import pipeline\n",
+    "import PyPDF2\n",
+    "\n",
+    "# Load the question answering pipeline\n",
+    "model_name = \"bert-large-uncased-whole-word-masking-finetuned-squad\"\n",
+    "qa_pipeline = pipeline(\"question-answering\", model=model_name, tokenizer=model_name)\n",
+    "\n",
+    "# Initialize conversation history dictionary\n",
+    "conversation_history = {\n",
+    "    \"context\": None,\n",
+    "    \"questions\": [],\n",
+    "    \"answers\": []\n",
+    "}\n",
+    "\n",
+    "def answer_question(context, question):\n",
+    "    try:\n",
+    "        if len(conversation_history['questions']) != 0:\n",
+    "            concatenated_text = \"\"\n",
+    "            for history_question, answer in zip(conversation_history[\"questions\"], conversation_history[\"answers\"]):\n",
+    "                concatenated_text += f\"{history_question} {answer}. \"\n",
+    "            \n",
+    "            question = concatenated_text + question\n",
+    "\n",
+    "\n",
+    "        result = qa_pipeline(question=question, context=context)\n",
+    "        return question, result['answer'], result['score']\n",
+    "    except Exception as e:\n",
+    "        print(\"Error occurred while answering the question:\", e)\n",
+    "        return \"Sorry, I couldn't find an answer to that question.\"\n",
+    "\n",
+    "def add_to_conversation_history(context, question, answer):\n",
+    "    # Add the current context, question, and answer to conversation history\n",
+    "    conversation_history[\"context\"] = context\n",
+    "    conversation_history[\"questions\"].append(question)\n",
+    "    conversation_history[\"answers\"].append(answer)\n",
+    "\n",
+    "def extract_text_from_pdf(pdf_file_path):\n",
+    "    text = \"\"\n",
+    "    with open(pdf_file_path, 'rb') as file:\n",
+    "        pdf_reader = PyPDF2.PdfReader(file)\n",
+    "        for page_num in range(len(pdf_reader.pages)):\n",
+    "            page = pdf_reader.pages[page_num]\n",
+    "            text += page.extract_text()\n",
+    "    return text\n",
+    "\n",
+    "# Define GUI layout\n",
+    "layout = [\n",
+    "    [sg.Text(\"Question-Answering System\")],\n",
+    "    [sg.Text(\"PDF File:\"), sg.InputText(key='-PDF_FILE-'), sg.FileBrowse()],\n",
+    "    [sg.Text(\"Context:\"), sg.Multiline(key='-CONTEXT-', size=(60, 10))],\n",
+    "    [sg.Multiline(size=(60, 10), key='-OUTPUT-', disabled=True)],\n",
+    "    [sg.InputText(key='-INPUT-')],\n",
+    "    [sg.Button('Load PDF'), sg.Button('Ask'), sg.Button('Exit')],\n",
+    "]\n",
+    "\n",
+    "# Create the GUI window\n",
+    "window = sg.Window('QA System', layout)\n",
+    "\n",
+    "# Main event loop\n",
+    "while True:\n",
+    "    event, values = window.read()\n",
+    "\n",
+    "    if event == sg.WINDOW_CLOSED or event == 'Exit':\n",
+    "        break\n",
+    "\n",
+    "    if event == 'Load PDF':\n",
+    "        pdf_file_path = values['-PDF_FILE-']\n",
+    "        if pdf_file_path:\n",
+    "            context = extract_text_from_pdf(pdf_file_path)\n",
+    "            window['-CONTEXT-'].update(context)\n",
+    "\n",
+    "    if event == 'Ask':\n",
+    "        user_input = values['-INPUT-']\n",
+    "        context = values['-CONTEXT-']\n",
+    "\n",
+    "        if user_input:\n",
+    "            question = user_input\n",
+    "\n",
+    "            # Get response to the user's question\n",
+    "            concat, answer, score = answer_question(context, question)\n",
+    "            add_to_conversation_history(context, question, answer)\n",
+    "\n",
+    "            # Display the answer in the GUI window\n",
+    "            window['-OUTPUT-'].print(\"Question: \" + concat)\n",
+    "            window['-OUTPUT-'].print(\"Answer: \" + answer)\n",
+    "            window['-OUTPUT-'].print(\"Score: \" + str(score))\n",
+    "            window['-OUTPUT-'].print(\"\")\n",
+    "\n",
+    "window.close()\n"
+   ]
   }
  ],
  "metadata": {
