--- a/app.ipynb
+++ b/app.ipynb
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -634,6 +634,132 @@
     "            window['-OUTPUT-'].print(\"Question: \" + concat)\n",
     "            window['-OUTPUT-'].print(\"Answer: \" + answer)\n",
     "            window['-OUTPUT-'].print(\"Score: \" + str(score))\n",
+    "            window['-OUTPUT-'].print(\"\")\n",
+    "\n",
+    "window.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-large-uncased-whole-word-masking-finetuned-squad were not used when initializing BertForQuestionAnswering: ['bert.pooler.dense.weight', 'bert.pooler.dense.bias']\n",
+      "- This IS expected if you are initializing BertForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "No model was supplied, defaulted to sshleifer/distilbart-cnn-12-6 and revision a4f8f3e (https://huggingface.co/sshleifer/distilbart-cnn-12-6).\n",
+      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import PySimpleGUI as sg\n",
+    "from transformers import pipeline\n",
+    "import PyPDF2\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "# Load the question answering pipeline\n",
+    "qa_pipeline = pipeline(\"question-answering\", model=\"bert-large-uncased-whole-word-masking-finetuned-squad\")\n",
+    "summarization_pipeline = pipeline(\"summarization\")\n",
+    "\n",
+    "# Initialize conversation history dictionary\n",
+    "conversation_history = {\n",
+    "    \"context\": None,\n",
+    "    \"questions\": [],\n",
+    "    \"answers\": []\n",
+    "}\n",
+    "\n",
+    "def answer_question(context, question):\n",
+    "    try:\n",
+    "        if len(conversation_history['questions']) != 0:\n",
+    "            concatenated_text = \"\"\n",
+    "            for history_question, answer in zip(conversation_history[\"questions\"], conversation_history[\"answers\"]):\n",
+    "                concatenated_text += f\"{history_question} {answer}. \"\n",
+    "            \n",
+    "            question = concatenated_text + question\n",
+    "\n",
+    "\n",
+    "        result = qa_pipeline(question=question, context=context)\n",
+    "        return question, result['answer'], result['score']\n",
+    "    except Exception as e:\n",
+    "        print(\"Error occurred while answering the question:\", e)\n",
+    "        return \"Sorry, I couldn't find an answer to that question.\"\n",
+    "\n",
+    "def summarize_text(text):\n",
+    "    try:\n",
+    "        summary = summarization_pipeline(text, max_length=150, min_length=30, do_sample=False)[0]['summary_text']\n",
+    "        return summary\n",
+    "    except Exception as e:\n",
+    "        print(\"Error occurred while summarizing the text:\", e)\n",
+    "        return \"Sorry, I couldn't summarize the text.\"\n",
+    "\n",
+    "def add_to_conversation_history(context, question, answer):\n",
+    "    # Add the current context, question, and answer to conversation history\n",
+    "    conversation_history[\"context\"] = context\n",
+    "    conversation_history[\"questions\"].append(question)\n",
+    "    conversation_history[\"answers\"].append(answer)\n",
+    "\n",
+    "def extract_text_from_pdf(pdf_file_path):\n",
+    "    text = \"\"\n",
+    "    with open(pdf_file_path, 'rb') as file:\n",
+    "        pdf_reader = PyPDF2.PdfReader(file)\n",
+    "        for page_num in range(len(pdf_reader.pages)):\n",
+    "            page = pdf_reader.pages[page_num]\n",
+    "            text += page.extract_text()\n",
+    "    return text\n",
+    "\n",
+    "# Define GUI layout\n",
+    "layout = [\n",
+    "    [sg.Text(\"Question-Answering System\")],\n",
+    "    [sg.Text(\"PDF File:\"), sg.InputText(key='-PDF_FILE-'), sg.FileBrowse()],\n",
+    "    [sg.Text(\"Context:\"), sg.Multiline(key='-CONTEXT-', size=(60, 10))],\n",
+    "    [sg.Multiline(size=(60, 10), key='-OUTPUT-', disabled=True)],\n",
+    "    [sg.InputText(key='-INPUT-')],\n",
+    "    [sg.Button('Load PDF'), sg.Button('Ask'), sg.Button('Summarize'), sg.Button('Exit')],\n",
+    "]\n",
+    "\n",
+    "# Create the GUI window\n",
+    "window = sg.Window('QA System', layout)\n",
+    "\n",
+    "# Main event loop\n",
+    "while True:\n",
+    "    event, values = window.read()\n",
+    "\n",
+    "    if event == sg.WINDOW_CLOSED or event == 'Exit':\n",
+    "        break\n",
+    "\n",
+    "    if event == 'Load PDF':\n",
+    "        pdf_file_path = values['-PDF_FILE-']\n",
+    "        if pdf_file_path:\n",
+    "            context = extract_text_from_pdf(pdf_file_path)\n",
+    "            window['-CONTEXT-'].update(context)\n",
+    "\n",
+    "    if event == 'Ask':\n",
+    "        user_input = values['-INPUT-']\n",
+    "        context = values['-CONTEXT-']\n",
+    "\n",
+    "        if user_input:\n",
+    "            question = user_input\n",
+    "\n",
+    "            # Get response to the user's question\n",
+    "            concat, answer, score = answer_question(context, question)\n",
+    "            add_to_conversation_history(context, question, answer)\n",
+    "\n",
+    "            # Display the answer in the GUI window\n",
+    "            window['-OUTPUT-'].print(\"Question: \" + concat)\n",
+    "            window['-OUTPUT-'].print(\"Answer: \" + answer)\n",
+    "            window['-OUTPUT-'].print(\"Score: \" + str(score))\n",
+    "            window['-OUTPUT-'].print(\"\")\n",
+    "\n",
+    "    if event == 'Summarize':\n",
+    "        context = values['-CONTEXT-']\n",
+    "        if context:\n",
+    "            summary = summarize_text(context)\n",
+    "            window['-OUTPUT-'].print(\"Summary: \" + summary)\n",
     "            window['-OUTPUT-'].print(\"\")\n",
     "\n",
     "window.close()\n"
